<resources>
    <string name="app_name">Twobbble</string>
    <string name="click_to_login">Click to Login</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <!--浏览作品-->
    <string name="explore">Explore</string>
    <!--我的作品集-->
    <string name="my_buckets">My buckets</string>
    <!--我的作品-->
    <string name="my_shots">My Shots</string>
    <string name="likes">Likes</string>
    <string name="settings">Settings</string>
    <string name="recent">RECENT</string>
    <string name="popular">POPULAR</string>
    <string name="following">FOLLOWING</string>
    <string name="net_disable">The current network is not available</string>
    <string name="request_error">Request error</string>
    <string name="no_shot">No shot here</string>
    <string name="click_retry">Click to try again</string>
    <string name="gif">GIF</string>
    <string name="load_retry">Failed to load，Click to try again</string>
    <string name="search">Search</string>
    <string name="sort">sort</string>
    <string name="now">Now</string>
    <string name="week">Past week</string>
    <string name="month">Past month</string>
    <string name="year">Past year</string>
    <string name="ever">All time</string>
    <string name="action_settings">Settings</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="add_comment_hint">Add your comment</string>
    <string name="no_description">No Description\n</string>
    <string name="no_comment">No Comment</string>
    <string name="into_the_bucket">Into the bucket</string>
    <string name="input_keyword">Input keyword</string>
    <string name="start_speak">Please say the keywords</string>
    <string name="login">Login</string>
    <string name="login_failed">Login failed</string>
    <string name="login_success">Login success</string>
    <string name="please_wait">Please wait..</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="logout_hint_title">You are logging out</string>
    <string name="logout_hint">Are you sure you want to log out? This will make you lose some functionality</string>
    <string name="not_logged">This feature requires login to use, please login first :）</string>
    <string name="like_success">Like success</string>
    <string name="like_failed">Like failed</string>
    <string name="unlike_success">Unlike success</string>
    <string name="unlike_failed">Unlike failed</string>
    <string name="account_not_player">Your account may not be player T^T</string>
    <string name="no_likes">You have no liked works ┐(ﾟ～ﾟ)┌ </string>
    <string name="input_bucket_name">Enter the name of the bucket</string>
    <string name="input_bucket_description">Enter the description of this bucket</string>
    <string name="create_bucket">Create a bucket</string>
    <string name="create">create</string>
    <string name="bucket_name_null">Buckets name can not be empty</string>
    <string name="no_bucket">You have no bucket for the time being</string>
    <string name="delete_bucket">Delete bucket</string>
    <string name="delete_shot">Delete shot</string>
    <string name="whether_to_delete_shot_from_bucket">Are you sure you want to delete this shot from bucket?</string>
    <string name="delete">Delete</string>
    <string name="whether_to_delete_bucket">Are you sure you want to delete this bucket?</string>
    <string name="delete_success">Delete success</string>
    <string name="delete_failed">Delete failed</string>
    <string name="modify_bucket">Modify bucket</string>
    <string name="modify_success">Modify success</string>
    <string name="modify_failed">Modify failed</string>
    <string name="add_to_bucket">Add to bucket</string>
    <string name="add_success">Add success</string>
    <string name="add_failed">Add failed</string>
    <string name="follow">Follow</string>
    <string name="shots">Shots</string>
    <string name="buckets">Buckets</string>
    <string name="comments">Comments</string>
    <string name="followers">Followers</string>
    <string name="followings">Followings</string>
    <string name="get_liked">Get liked</string>
    <string name="projects">Projects</string>
    <string name="teams">Teams</string>
    <string name="no_personal_introduction">No personal introduction</string>
    <string name="no_shots">No shots</string>
    <string name="follow_success">Follow success</string>
    <string name="follow_failed">Follow failed</string>
    <string name="un_follow_success">Unfollow success</string>
    <string name="un_follow_failed">Unfollow failed</string>
    <string name="Unfollow">Unfollow</string>
    <string name="other">Other</string>
    <string name="version">Version</string>
    <string name="clear_cache">Clear cache</string>
    <string name="license">License</string>
    <string name="clear_success">Clear cache success</string>
    <string name="update">Update</string>


    <string-array name="sorts">
        <!--最受欢迎的-->
        <item>Popular</item>
        <!--评论最多的-->
        <item>Most commented</item>
        <!--最近的-->
        <item>Most recent</item>
        <!--浏览量最大的-->
        <item>Most viewed</item>
    </string-array>
    <string-array name="sort_list">
        <!--任何作品-->
        <item>Any</item>
        <!--动画-->
        <item>Animated</item>
        <!--携带附件的-->
        <item>With attachments</item>
        <!--初次上线的-->
        <item>Debuts</item>
        <!--季度精选-->
        <item>Playoffs</item>
        <!--回炉重造  再创作-->
        <item>Rebounds</item>
        <!--团队作品-->
        <item>Teamwork</item>
    </string-array>
</resources>
