<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--<item-->
    <!--android:id="@+id/mSearch"-->
    <!--android:icon="@drawable/ic_search_light_24dp"-->
    <!--android:title="@string/search"-->
    <!--app:showAsAction="always" />-->

    <item
        android:icon="@drawable/ic_filter_list_light_24dp"
        android:title="@string/sort"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/mNow"
                android:title="@string/now" />
            <item
                android:id="@+id/mWeek"
                android:title="@string/week" />
            <item
                android:id="@+id/mMonth"
                android:title="@string/month" />
            <item
                android:id="@+id/mYear"
                android:title="@string/year" />
            <item
                android:id="@+id/mAllTime"
                android:title="@string/ever" />
        </menu>
    </item>
</menu>