<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--<ImageView-->
        <!--android:id="@+id/beta_upgrade_banner"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="@mipmap/newversion" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/beta_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="beta_title"
                android:text="@string/app_name"
                android:textSize="@dimen/text24" />

            <TextView
                android:id="@+id/beta_upgrade_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp16"
                android:tag="beta_upgrade_info"
                android:text="dsadasdas" />

            <TextView
                android:id="@+id/beta_upgrade_feature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp16"
                android:tag="beta_upgrade_feature"
                android:text="dsadasdas" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp16"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginRight="@dimen/dp16"
            android:gravity="right"
            android:orientation="horizontal">

            <Button
                android:id="@+id/beta_cancel_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="beta_cancel_button"
                android:text="@string/cancel"
                android:textColor="@color/caption" />

            <Button
                android:id="@+id/beta_confirm_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="beta_confirm_button"
                android:text="@string/update"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>